# SFU

./: Cargo.toml
src/: main.rs
src/Schemes/: WebRTC.rs
src/models/: web_rtc.rs
src/sfu/: coordinator.rs  mod.rs  peer.rs  utils.rs
src/signal/: server.rs
src/websockets/: connection.rs  endpoint.rs  lobby.rs  messages.rs  mod.rs
