[package]
name = "sfu_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.0"
warp = "0.3"

futures = { version = "0.3", default-features = false }


#Actix
actix-rt = "2.8.0"
actix-web = "4"

#WebSocket
actix-web-actors="4.2.0"
actix = "0.13.1"

#UUID
uuid = { version = "1.3.2", features = ["serde", "v4"] }

#SERDE 
serde = {version="1.0.106", features=["derive"]}
serde_json = "1"

#Logger
env_logger = "0.10.0"

# .ENV
dotenvy = "0.15"

# Web RTC 
# webrtc-ice = "0.9.0"
webrtc = "0.6.0"
